# nti_aerocosm_2020

./: CMakeLists.txt  README.md  cmd.txt  j2.py  j3.py  jjj.py  joy.py  package.xml  rfid_ros.py  tetst.py
arduino/: Ros.txt  ros.ino
arduino/Ros/: Ros.ino
arduino/ros_arduino/: .gitignore  main2.cpp  zzz.code-workspace
arduino/ros_arduino/src/: main.cpp
launch/: cams.launch  cv_cam.launch  cv_cam2.launch  cv_cams.launch  full.launch  full_withmap.launch  turtlebro_map_navigation.launch  turtlebro_slam_navigation_2.launch  usb_cam.launch  usb_cam2.launch  usb_cams.launch  uvc_camera.launch  uvc_camera2.launch
maps/map1_take/: mymap.pgm
maps/map2/: mymap2.pgm  mymap2.yaml
maps/map_test/: mymap_test.pgm  mymap_test.yaml
scripts/: j3.py  odom_d.py  rfid_ros.py  send_goal.py  send_goal_v2.py  test_motion.py
